feat: comprehensive enhancement of Inward Clearing Processor for 4.5s SLA compliance
- Ultra-high performance architecture with nanosecond precision SLA monitoring
- Complete Cloud Spanner schema for payment state management and audit trails
- Advanced payment state machine with 20+ states and SLA boundary testing
- Production-ready ML fraud detection with real-time feature engineering
- Multi-model ensemble (XGBoost, LSTM, GNN) with <400ms inference time
- Stage-wise performance budgets: Validation 150ms, Fraud 400ms, Execution 1.3s
- Advanced chaos engineering framework for SLA-critical payment processing
- Circuit breaker hierarchy with adaptive thresholds and auto-recovery
- Redis cluster optimization for sub-5ms cache access and 99% hit rates
- Comprehensive operational UI with real-time SLA compliance monitoring
- Emergency processing modes for SLA breach scenarios
- Payment traceability with unique ID management and regulatory compliance
- JVM optimization with ZGC and virtual threads for ultra-low latency

The inward clearing processor now provides implementation-ready specifications
for consistent 4.5-second SLA compliance with enterprise-grade fraud detection,
comprehensive resilience patterns, and real-time operational dashboards.